# libgamearchives

./: .gitignore  CMakeLists.txt  README.md
src/gamearchives/: gamearchives.cpp  gamearchives.h
src/gamearchives/formats/ark/: ark.h  ark_archive.cpp  hdr_crypt_stream.cpp  hdr_crypt_stream.h  protected_file_stream.cpp  protected_file_stream.h
src/gamearchives/formats/fsg_fs/: fsg.h
src/gamearchives/stream/: inflate_stream.cpp  inflate_stream.h  multi_stream.cpp  multi_stream.h  offset_stream.cpp  offset_stream.h  std_stream.h  stream.cpp  stream.h
src/gamearchives/vfs/: archive_types.cpp  default_directory.cpp  default_directory.h  local_directory.cpp  local_directory.h  local_file.cpp  local_file.h  offset_file.cpp  offset_file.h  vfs.h
